Fixed incorrect spacing on all pages.

--- a/Angular-Frontend/src/styles.css
+++ b/Angular-Frontend/src/styles.css
@@ -15288,7 +15288,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 
 .main-panel > .content {
   margin-top: 0px;
-  padding: 30px 15px;
+  padding: 75px 15px;
   min-height: calc(100vh - 123px);
 }
 
